Application/kiali/chield/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: kiali-operator
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kiali.kdvops.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  hosts:
  - kiali.kdvops.com
  gateways:
  - istio-system/kdvops-gateway
  http:
  - route:
    - destination:
        host: kiali.kiali-operator.svc.cluster.local
        port:
          number: 5556
