Application/kiali/chield/manifests/virtualservice2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs2
  namespace: kiali-operator
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kiali2.kdvops.com
    #external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"

spec:
  gateways:
  #- istio-ingressgateway.istio-system.svc.cluster.local
  - istio-system/kdvops-gateway
  hosts:
  - kiali2.kdvops.com
  http:
  - headers:
      request:
        set:
          X-Forwarded-Port: "443"
          X-Forwarded-Proto: "https"
    route:
    - destination:
        host: kiali
        port:
          number: 20001
